chat: fix 'read more' button in messages
Closes #39.

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -820,6 +820,9 @@
     ._15aTv {
       color: var(--lighter) !important; }
 
+    /* Read more. */
+    ._2VdJh { color: var(--accent) !important }
+
     /* Phone numbers of users that aren't your contacts. */
     #main ._1F9Ap {
       color: var(--lighter) !important; }
