--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
 @updateURL    https://rawgit.com/vednoc/onyx/master/WhatsApp.user.css
-@version      1.4.7
+@version      1.4.8
 @author       vednoc
 @license      MIT
 @preprocessor uso
@@ -241,8 +241,8 @@
     --hover-delay: /*[[hoverDelay]]*/;
     --image: url(https://media.discordapp.net/attachments/310799529161129984/417408747812552715/zilesanamin.jpg);
     --emojiOpacity: /*[[emojiOpacity]]*/;
-    --version: "WhatsApp by Mew v1.4.7";
-    --message: "Updated on 11th of June. I wrote a little article about onyx -- read it here: https://vednoc.me/blog/the-state-of-onyx ";
+    --version: "WhatsApp by Mew v1.4.8";
+    --message: "Updated on 21st of July. Small update to address a few GitHub issues. ";
     --changes: "See the changelog at: https://github.com/vednoc/onyx/releases";
   }
 
