--- a/wa.user.styl
+++ b/wa.user.styl
@@ -176,4 +176,50 @@
             }
         }
     }
+
+    // App -> Left -> Profile/Settings.
+    .app span > div[style *= 'height: 100%'] {
+        > div[class], > span > div[class], > div > div[class] {
+            c: 0 0 bg;
+            > header {
+                // &, > div { height: unset }
+                border-bottom: 1px solid bd;
+                height: unset;
+                c: 0 0 hl;
+                /// NOTE: Reset text position.
+                ._1pYs5 {
+                    margin: 0;
+                    padding-top: 6px;
+                }
+            }
+            /// Highlighted sections.
+            ._2LSbZ {
+                c: 0 0 t;
+                box-shadow: none;
+                ._3he1q { c: ac }
+                ._3K9Sw { c: 0 bd }
+                ._5UNoc ._3hnO5 { c: 0 ac }
+            }
+            /// Settings -> User info section.
+            ._2UaNq {
+                border-bottom: 1px solid bd;
+                c: 0 0 t;
+                &::after { content: none }
+                [style *= 'height: 82px'] { c: 0 0 t }
+                /// Nick/info.
+                ._3H4MS { c: fg }
+                .xD91K { c: cm }
+            }
+            /// Settings -> Options.
+            ._26JG5 {
+                border-bottom: 1px solid bd;
+                c: 0 0 t;
+                &:hover { c: 0 0 hl }
+                &::before { content: none }
+                > div:last-child { c: 0 t }
+                ._6xQdq { c: fg }
+            }
+            ._1qWhd { c: cm }
+        }
+    }
 }
