--- a/wa.user.styl
+++ b/wa.user.styl
@@ -134,6 +134,20 @@
             c: 0 0 t;
             /// Avatar background.
             [style *= 'height: 40px'] { c: 0 0 t }
+        }
+        /// Alerts.
+        > header + span[class] {
+            ._1puWZ, ._2xikZ {
+                border-bottom: 1px solid bd;
+                c: 0 0 hl;
+                ._3K1Z_ * { c: yellow }
+                [data-icon ^= 'chevron-'] path { v: yellow }
+                [data-icon ^= 'alert-'] path {
+                    &[fill ^= '#FFF'] { fill: bd }
+                    &[fill ^= '#FFB'] { fill: yellow }
+                }
+            }
+        }
         /// Search.
         ._2HS9r {
             border-bottom: 1px solid bd;
