global: add media selection in media viewer area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -192,6 +192,20 @@
         }
     }
 
+    // Global -> Media selection.
+    ._2AP3i {
+        c: 0 bd bg;
+        /// Item reset.
+        ._1LdNS {
+            &.cJP5q {
+                border: none !important;
+                transform: scale(1) !important;
+                outline: 4px solid ac;
+            }
+            &:hover:not(.cJP5q):not(#spec) { outline: 4px solid ac !important }
+        }
+    }
+
     // Global -> Context menu.
     div:not(#z) {
         &[style ^= 'transform-origin:'] {
